fixed mobile device layout having extra white space on the right.

--- a/vite-project/src/assets/Home.css
+++ b/vite-project/src/assets/Home.css
@@ -149,3 +149,9 @@ body, html {
 .skills-list li {
     margin-bottom: 10px;
 }
+
+@media (min-width:320px){
+    .container,.container-md,.container-sm{
+        max-width: 325px
+    }
+}
